--- a/local/qunit.html
+++ b/local/qunit.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="../../../funcunit/qunit/qunit.css" />
+    <link rel="stylesheet" type="text/css" href="../../../../funcunit/qunit/qunit.css" />
     <title>local_store Test Suite</title>
     <style>
       body  {
@@ -10,7 +10,7 @@
 	  <script type='text/javascript'>
 		  steal = {ignoreControllers: true}
 	  </script>
-	  <script type='text/javascript' src='../../../steal/steal.js?steal[app]=ss/model/local_store/test/qunit'></script>
+	  <script type='text/javascript' src='../../../../steal/steal.js?steal[app]=ss/model/html5_store/local/test/qunit'></script>
     </head>
   <body>
     <h1 id="qunit-header">local_store Test Suite</h1>
